# imessage_reader

./: .gitignore  README.md  pyproject.toml  setup.py
imessage_reader/: cli.py  common.py  create_sqlite.py  data_container.py  fetch_data.py  write_excel.py
tests/: test_message_data.py
