[project]
name = "imessage-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "setuptools>=75.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
